--- a/style.css
+++ b/style.css
@@ -1,16 +1,61 @@
+@import "https://unpkg.com/open-props/easings.min.css";
+
+@view-transition {
+    navigation: auto;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+}
+
+@keyframes fade-out {
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes scale-down {
+    to {
+        transform: scale(.9);
+    }
+}
+
+@keyframes scale-up {
+    from {
+        transform: scale(.1);
+    }
+}
+
+@keyframes scale-down {
+    to {
+        transform: scale(.1);
+    }
+}
+
+@keyframes rotate-in {
+    from {
+        transform: rotate(90deg);
+    }
+}
+
+@keyframes rotate-out {
+    to {
+        transform: rotate(90deg);
+    }
+}
+
 :root {
-    /* windows logo colors */
-    --windows-blue: #0078D7;
-    --windows-green: #00BC0C;
-    --windows-yellow: #FFB900;
-    --windows-red: #FF0000;
+    --color-purple: oklch(0.44 0.23 311.11);
+    --color-pink: oklch(0.66 0.26 16.42);
+    --color-yellow: oklch(0.84 0.2 86.18);
+    --color-ocean: oklch(0.7 0.25 151.84);
 }
 
 /* reset */
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-size: 1rem;
 }
@@ -18,112 +63,198 @@
 /* global page styles */
 
 html {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 125%;
+    font-family: "Nunito", sans-serif;
     /* smooth font rendering */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
 body {
+    margin: 0;
     min-height: 100vh;
     display: grid;
     place-content: center;
 }
 
+img,
+svg {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+h1 {
+    font-size: 6rem;
+    letter-spacing: -.02em;
+    margin: 0;
+    line-height: 1;
+}
+
 .list-reset {
     list-style: none;
     padding: 0;
+    margin: 0;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+
 }
 
 .nav__list {
+    --gap: 1.5rem;
+    width: 100%;
+    height: 100%;
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 100px));
-    gap: 1rem;
-    /* grid-template-rows: repeat(2, minmax(0, 100px)); */
+    grid-template-columns: repeat(2, calc(20vw - var(--gap) / 2));
+    grid-template-rows: repeat(2, calc(20vh - var(--gap) / 2));
+    gap: var(--gap);
+
+    /* @media screen and (min-width: 900px) {
+        grid-template-columns: repeat(2, 10vw);
+        grid-template-rows: repeat(2, 10vh);
+
+    } */
 }
 
 .nav__item {
-    aspect-ratio: 1/1;
     display: grid;
 }
 
 .nav__link {
-    display: block;
     display: grid;
     place-items: center;
-    text-align: center;
-    color: white;
+    font-weight: bold;
+    line-height: 1;
     text-decoration: none;
-    text-indent: -9999px;
+    color: white;
+    border-radius: .25rem;
+    transition: .1s var(--ease-in-out-3);
 
     .nav__item--one & {
-        background-color: var(--windows-blue);
-        view-transition-name: page-one;
+        background-color: var(--color-pink);
     }
 
     .nav__item--two & {
-        background-color: var(--windows-green);
-        view-transition-name: page-two;
+        background-color: var(--color-purple);
     }
 
     .nav__item--three & {
-        background-color: var(--windows-yellow);
-        view-transition-name: page-three;
+        background-color: var(--color-yellow);
     }
 
     .nav__item--four & {
-        background-color: var(--windows-red);
-        view-transition-name: page-four;
+        background-color: var(--color-ocean);
+    }
+
+    &:hover {
+        scale: 1.05;
+    }
+
+    &:active {
+        scale: 1;
     }
 }
 
 .page {
-    height: 80vh;
-    width: 80vw;
+    height: calc(100vh - 10vw);
+    width: calc(100vw - 10vw);
     color: white;
     display: grid;
     place-items: center;
     padding: 1.5rem;
     text-align: center;
+    border-radius: 1rem;
+    view-transition-name: link-page;
 }
 
 .page--one {
-    background-color: var(--windows-blue);
-    view-transition-name: page-one;
+    background-color: var(--color-pink);
 }
 
 .page--two {
-    background-color: var(--windows-green);
-    view-transition-name: page-two;
+    background-color: var(--color-purple);
 }
 
 .page--three {
-    background-color: var(--windows-yellow);
-    view-transition-name: page-three;
+    background-color: var(--color-yellow);
 }
 
 .page--four {
-    background-color: var(--windows-red);
-    view-transition-name: page-four;
+    background-color: var(--color-ocean);
 }
 
 .page__back {
     place-self: start end;
     color: white;
+    text-decoration: none;
+    view-transition-name: back-link;
+}
+
+::view-transition-new(back-link) {
+    animation:
+        100ms var(--ease-3) 200ms both fade-in,
+        100ms var(--ease-out-3) 200ms both scale-up,
+        100ms var(--ease-out-3) 200ms both rotate-in;
 }
 
 .page__body,
 .page__back {
-    grid-area: 1 / 1 / auto / auto;
+    grid-area: 1 / 1;
 }
 
-::view-transition-old(page-one),
-::view-transition-new(page-one),
-::view-transition-old(page-two),
-::view-transition-new(page-two),
-::view-transition-old(page-three),
-::view-transition-new(page-three),
-::view-transition-old(page-four),
-::view-transition-new(page-four) {
-    height: 100%;
+/* ::view-transition-group(root) {
+    animation-duration: 2s;
+} */
+
+/*
+::view-transition-new(root) {
+    animation-duration: 1s;
 }
+
+::view-transition-old(root) {
+    animation-duration: .1s;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+}
+
+@keyframes fade-out {
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes slide-from-bottom {
+    from {
+        transform: translateY(30px);
+    }
+}
+
+@keyframes slide-to-bottom {
+    to {
+        transform: translateY(30px);
+    }
+}
+
+::view-transition-old(root) {
+    animation: 90ms var(--ease-in-1) both fade-out,
+        300ms var(--ease-in-out-3) both slide-to-bottom;
+}
+
+::view-transition-new(root) {
+    animation: 210ms var(--ease-out-1) 90ms both fade-in,
+        300ms var(--ease-in-out-3) both slide-from-bottom;
+} */
