--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import "https://unpkg.com/open-props/easings.min.css";
-
 @view-transition {
     navigation: auto;
 }
@@ -118,12 +116,6 @@ h1 {
     grid-template-columns: repeat(2, calc(20vw - var(--gap) / 2));
     grid-template-rows: repeat(2, calc(20vh - var(--gap) / 2));
     gap: var(--gap);
-
-    /* @media screen and (min-width: 900px) {
-        grid-template-columns: repeat(2, 10vw);
-        grid-template-rows: repeat(2, 10vh);
-
-    } */
 }
 
 .nav__item {
@@ -138,7 +130,7 @@ h1 {
     text-decoration: none;
     color: white;
     border-radius: .25rem;
-    transition: .1s var(--ease-in-out-3);
+    transition: .1s ease-in-out;
 
     .nav__item--one & {
         background-color: var(--color-pink);
@@ -174,7 +166,6 @@ h1 {
     padding: 1.5rem;
     text-align: center;
     border-radius: 1rem;
-    view-transition-name: link-page;
 }
 
 .page--one {
@@ -202,59 +193,12 @@ h1 {
 
 ::view-transition-new(back-link) {
     animation:
-        100ms var(--ease-3) 200ms both fade-in,
-        100ms var(--ease-out-3) 200ms both scale-up,
-        100ms var(--ease-out-3) 200ms both rotate-in;
+        100ms ease 200ms both fade-in,
+        100ms ease-out 200ms both scale-up,
+        100ms ease-out 200ms both rotate-in;
 }
 
 .page__body,
 .page__back {
     grid-area: 1 / 1;
 }
-
-/* ::view-transition-group(root) {
-    animation-duration: 2s;
-} */
-
-/*
-::view-transition-new(root) {
-    animation-duration: 1s;
-}
-
-::view-transition-old(root) {
-    animation-duration: .1s;
-}
-
-@keyframes fade-in {
-    from {
-        opacity: 0;
-    }
-}
-
-@keyframes fade-out {
-    to {
-        opacity: 0;
-    }
-}
-
-@keyframes slide-from-bottom {
-    from {
-        transform: translateY(30px);
-    }
-}
-
-@keyframes slide-to-bottom {
-    to {
-        transform: translateY(30px);
-    }
-}
-
-::view-transition-old(root) {
-    animation: 90ms var(--ease-in-1) both fade-out,
-        300ms var(--ease-in-out-3) both slide-to-bottom;
-}
-
-::view-transition-new(root) {
-    animation: 210ms var(--ease-out-1) 90ms both fade-in,
-        300ms var(--ease-in-out-3) both slide-from-bottom;
-} */
